--- a/htdocs/design/css/dude.css
+++ b/htdocs/design/css/dude.css
@@ -66,7 +66,8 @@ article li{padding-bottom: 5px;}
 article h2{max-width: 500px;}
 
 
-article nav{/* border:3px solid #e9ebeb; border-left: 0; border-right: 0; */ padding: 10px 20px 0px 30px; margin: 0 0 0 30px;}
+article nav{/* border:3px solid #e9ebeb; border-left: 0; border-right: 0; */ padding: 30px 20px 0px 30px; margin: 0 0 0 30px;}
+article nav p{margin: 0 0 10px;}
 
 article.fullheight{min-height: 100vh;}
 
