--- a/htdocs/design/css/dude.css
+++ b/htdocs/design/css/dude.css
@@ -15,6 +15,8 @@ links
 */
 
 @import url(https://fonts.googleapis.com/css?family=Crimson+Text:400,600);
+/* @import url('https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i'); */
+
 
 html {-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;}
 *, *:before, *:after {-webkit-box-sizing: inherit; -moz-box-sizing: inherit; box-sizing: inherit; }
