blahh screw all this speaking stuff its probably all lies and subterfuge

--- a/htdocs/design/css/dude.css
+++ b/htdocs/design/css/dude.css
@@ -45,20 +45,22 @@ strong{font-weight: 600;}
 .btn-home i{right: 0;}
 
 /* aside */
-aside{width: 33%; background: #333 no-repeat 50% 50%; background-size: cover; position: fixed; top:0; left: 0; bottom: 0;}
+aside{width: 38.2%; background: #f4f4f3 no-repeat 50% 50%; background-size: cover; position: fixed; top:0; left: 0; bottom: 0;}
 aside p{ position: absolute; bottom: 0; left: 0; right: 0; text-align: center; margin: 0;}
 aside p a{font-size: 14px; display: inline-block; color: #ccc; padding: 13px 20px 15px; background: rgba(0,0,0,0.7); margin: 0 -2px; bottom: -5px; position: relative;}
 aside p a:hover{background: rgba(225,27,27,0.8); text-decoration: none; bottom: 0;	}
 
 aside p a i{font-size: 24px;}
 
+aside .ss-smile{color: #efefed; font-size: 200px; position: absolute; top:30%; left: 0; display: block; width: 100%; text-align: center;}
+
 /* the main event */
-article{margin-left: 33%; padding: 50px 10%; border-bottom: 1px solid #eee; position: relative; background: #fff;}
+article{margin-left: 38.2%; padding: 50px 10%; border-bottom: 1px solid #eee; position: relative; background: #fff;}
 article.alt{background: #f0f4f5}
 article h2,
 article h3,
 article h4{font-size: 54px; line-height: 60px; font-weight: normal; margin: 0; padding: 36px 0 0;}
-article h3{font-size: 28px; line-height: 32px;}
+article h3{font-size: 28px; line-height: 32px; padding-bottom: 20px;}
 article h4{font-size: 24px; line-height: 32px; max-width:550px;}
 article p,
 article dl,
@@ -104,15 +106,17 @@ article blockquote.left p{text-align: left; max-width: 600px; font-size: 24px; l
 article blockquote.left cite{font-size: 14px; display: block; position: relative; padding:12px 0 40px 50px; text-align: left; max-width: 550px; margin: 15px  0;}
 article blockquote.left cite img{width: 40px; height: 40px; border-radius: 999em; position: absolute; top:0; left: 0; margin: 0;}
 
-
-
-.projects a{display: block; float: left; width: 33%; color: #999; font-family: "Helvetica Neue", Helvetica, sans-serif; font-size: 14px; text-align: center; padding: 15px 0; line-height: 18px; cursor: pointer;}
-.projects a strong{color: #232125;}
-.projects a img{max-width: 80%;display: block; margin: 0 auto 10px;}
 p:after,
 .projects:after{display: block; clear: both; content: '';}
-.projects a:hover{color: #009f70; text-decoration: none;}
 
+.project{display: block; float: left; width: 25%; color: #999; font-family: "Helvetica Neue", Helvetica, sans-serif; font-size: 14px; text-align: center; padding: 15px 0; line-height: 18px; cursor: pointer;}
+.project strong{color: #232125;}
+.project img{max-width: 80%;display: block; margin: 0 auto 10px;}
+.project .project:hover{color: #009f70; text-decoration: none;}
+
+.projects.fa {padding:15px 0 0 150px; position: relative; min-height: 150px; max-width: 650px; margin-top: 20px;}
+.projects.fa .project{position: absolute; top:0; left: 0; width: 130px;}
+.projects.fa .project img{max-width: 100%;}
 
 .clear{display: block; clear:both;}
 
@@ -297,6 +301,11 @@ hr{border: none;}
 	
 }
 
+
+/* man I get so sick of all this sometimes. */
+article.humble{margin: 0 auto;}
+
+
 @media (max-width: 600px){
 	aside{position: relative; bottom: auto; width: auto; height: 350px;}
 	aside p{background: rgba(0,0,0,0.5); left: auto; display: none;}
@@ -314,7 +323,8 @@ hr{border: none;}
 	.topic_trio .topic{float: none; width:auto;margin-bottom: 15px; height: auto;}	
 }
 
-aside{background-image: url(../images/aside/teaching.jpg);}
+
+aside.teaching{background-image: url(../images/aside/teaching.jpg);}
 aside.laff{background-image: url(../images/aside/laff.jpg);}
 aside.wood{background-image: url(../images/aside/stacked_wood.jpg);}
 aside.optimus{background-image: url(../images/aside/transformerbutton.gif);}
