go team optimus

--- a/htdocs/design/css/dude.css
+++ b/htdocs/design/css/dude.css
@@ -303,6 +303,7 @@ hr{border: none;}
 
 
 /* man I get so sick of all this sometimes. */
+/* Glittering up the trojan horse is exhausting. */
 article.humble{margin: 0 auto;}
 
 
