put some contact details in idiot

--- a/htdocs/design/css/dude.css
+++ b/htdocs/design/css/dude.css
@@ -187,6 +187,7 @@ article.gsd .keydesc .panel:hover,
 
 
 #home p{max-width: 460px;}
+#home h2{font-size: 120px; line-height: 100%; text-indent: -25px;}
 
 
 /* for topics */
